# claude-ui-tool

./: .gitignore  README.md  start.sh
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: agents.py  chat.py  cli.py  commands.py  github.py  mcp.py  relationships.py  settings.py  skills.py  workflows.py
backend/utils/: agent_utils.py  claude_dir.py  claude_sdk.py  file_utils.py  frontmatter.py  message_normalizer.py  models.py  relationships.py  slug_utils.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/cli/: TerminalComponent.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/context/: AgentsContext.tsx  AppProviders.tsx  ChatContext.tsx  CommandsContext.tsx  SkillsContext.tsx  ThemeContext.tsx  WorkflowsContext.tsx  createResourceContext.tsx
frontend/src/hooks/: useAgents.ts  useCommands.ts  useCrud.ts  useSkills.ts  useWebSocketChat.ts  useWorkflows.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/pages/agents/: AgentDetailPage.tsx  AgentsPage.tsx
frontend/src/pages/cli/: CliPage.tsx
frontend/src/pages/commands/: CommandDetailPage.tsx  CommandsPage.tsx
frontend/src/pages/graph/: GraphPage.tsx
frontend/src/pages/mcp/: McpPage.tsx
frontend/src/pages/settings/: SettingsPage.tsx
frontend/src/pages/skills/: SkillDetailPage.tsx  SkillsPage.tsx
frontend/src/pages/workflows/: WorkflowDetailPage.tsx  WorkflowsPage.tsx
frontend/src/utils/: api.ts  models.ts
